# r2-relay

./: Caddyfile  Cargo.toml  Dockerfile  README.md  deploy.sh  install.sh
src/: buffer.rs  main.rs  protocol.rs  state.rs  ws.rs
static/: dashboard.html
